--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -131,28 +131,22 @@
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
 		<div class="col-lg-8">
                     <h2 class="section-heading">{% trans "About ScriptNet" %}</h2>
-                    <h4 class="section-heading">De Bello Gallico</h4>
-                    <!-- <hr class="light"> -->
+                    <h4 class="section-heading"></h4>
+                                        <p class="text-faded">
+ScriptNet is a platform that hosts competitions related to Handwritten Text
+Recognition (HTR) and other Document Image Analysis (DIA) areas of research. It aims
+to attract as many research groups as possible to contribute to the task of
+unconstrained historical handwriting recognition. The main idea is to host several
+competitions in a common and uniform environment. 
+                                        </p>
+<br><br><br>
                     <p class="text-faded">
-Gallia est omnis divisa in partes tres, quarum unam incolunt Belgae, aliam Aquitani, tertiam qui ipsorum lingua Celtae, nostra Galli appellantur. 2 Hi omnes lingua, institutis, legibus inter se differunt. Gallos ab Aquitanis Garumna flumen, a Belgis Matrona et Sequana dividit. 3 Horum omnium fortissimi sunt Belgae, propterea quod a cultu atque humanitate provinciae longissime absunt, minimeque ad eos mercatores saepe commeant atque ea quae ad effeminandos animos pertinent important, 4 proximique sunt Germanis, qui trans Rhenum incolunt, quibuscum continenter bellum gerunt. Qua de causa Helvetii quoque reliquos Gallos virtute praecedunt, quod fere cotidianis proeliis cum Germanis contendunt, cum aut suis finibus eos prohibent aut ipsi in eorum finibus bellum gerunt.
-
-                    </p><p class="text-faded">
-Sed ex veniam eirmod, te est nihil ornatus. Ut graeci discere verterem eos, etiam habemus pri ei. Sit veniam explicari principes an. Id animal complectitur mea.
-
-Eleifend postulant est ex, legimus copiosae qualisque no mei. Vivendum interesset eu quo, cetero delectus cu nec, quo id laoreet inermis. Vis erant ancillae abhorreant id, ponderum delicatissimi per id. Ei vis dicit elitr sapientem, mel ei scripta recusabo conceptam.
-
-Ea dolore soleat philosophia vim. Id ius clita possim suscipit, posse propriae no sit. Docendi dolores eu qui. Iuvaret civibus tincidunt ne mei, ad dicit eruditi rationibus his.
-
-Eu pro modus congue consetetur, has malis option recteque in. In nam laboramus necessitatibus. Ea nam fastidii rationibus. Porro contentiones id vix, mazim quodsi qui ut. Ei sed omnesque efficiendi. Ad eam putant nostrud, altera pertinax reprehendunt vel et.
-
-                    </p><p class="text-faded">
-Erat gubergren honestatis vel id, probo appellantur eu his. Option nominavi accusata pri eu, errem apeirian nam et. Per vidit omnis vulputate at, et sit malis utamur delectus. Fugit minim adipisci ex has, dolorem gloriatur definitionem per eu. Ei nam eirmod suavitate scripserit, legere scripserit te vis. Illud utroque deterruisset pri in, recusabo neglegentur ex sed.
-
-			</p>
-                    <h4 class="section-heading">Principia Mathematica</h4>
-			<p class="text-faded">
-Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales statuendæ sunt quotquot cum experimentis generaliter quadrant; & quæ minui non possunt, non possunt auferri. Certe contra experimentorum tenorem somnia temere confingenda non sunt, nec a naturæ analogia recedendum est, cum ea simplex esse soleat & sibi semper consona. Extensio corporum non nisi per sensus innotescit, nec in omnibus sentitur: sed quia sensibilibus omnibus competit, de universis affirmatur. Corpora plura dura esse experimur. Oritur autem durities totius a duritie partium, & inde non horum tantum corporum quæ sentiuntur, sed aliorum etiam omnium particulas indivisas esse duras merito concludimus.
-			</p>
+ScriptNet contains functionality
+which enables everyone to submit results anytime and get evaluation
+results, as well as ranking, automatically. 
+It is an initiative of the <b>READ EU funded project</b>, aiming to provide large datasets for
+stimulating research in HTR and related technologies. 
+    		    	</p>
                 </div>
 		<div class="col-lg-4">
 		    <img src="{% static 'img/nicesamples/1.original.jpg' %}" class="img-responsive" alt="">
