Temporary change: No competitions shown on-site

--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -168,7 +168,7 @@ stimulating research in HTR and related technologies.
 
         <div class="container-fluid text-center">
             <div class="row no-gutter">
-				{% if competitions %}
+				{% if false %}
                 <ul class="list-group">                
 				{% for c in competitions %}
                 <li class="list-group-item">
