Fixes #50 Only competitions tagged as public will show up on the master page

--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -183,7 +183,7 @@ stimulating research in HTR and related technologies.
 	    			</div>
                     <div class="col-lg-1">
                         <a href="{% url 'competition' competition_id=c.id %}">                    
-                    			Competition {{ c.id }}: {{ c.name }}
+                    			{{ c.name }}
                         </a>                            
     				</div>
     				<div class="col-lg-5"></div>                
