Adds translations for Scriptnet general info

--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -133,19 +133,11 @@
                     <h2 class="section-heading">{% trans "About ScriptNet" %}</h2>
                     <h4 class="section-heading"></h4>
                                         <p class="text-faded">
-ScriptNet is a platform that hosts competitions related to Handwritten Text
-Recognition (HTR) and other Document Image Analysis (DIA) areas of research. It aims
-to attract as many research groups as possible to contribute to the task of
-unconstrained historical handwriting recognition. The main idea is to host several
-competitions in a common and uniform environment. 
+{% trans "ScriptNet is a platform that hosts competitions related to Handwritten Text Recognition (HTR) and other Document Image Analysis (DIA) areas of research. It aims to attract as many research groups as possible to contribute to the task of unconstrained historical handwriting recognition. The main idea is to host several competitions in a common and uniform environment." %} 
                                         </p>
 <br><br><br>
                     <p class="text-faded">
-ScriptNet contains functionality
-which enables everyone to submit results anytime and get evaluation
-results, as well as ranking, automatically. 
-It is an initiative of the <b>READ EU funded project</b>, aiming to provide large datasets for
-stimulating research in HTR and related technologies. 
+{% trans "ScriptNet contains functionality which enables everyone to submit results anytime and get evaluation results, as well as ranking, automatically.  It is an initiative of the <b>READ EU funded project</b>, aiming to provide large datasets for stimulating research in HTR and related technologies." %} 
     		    	</p>
                 </div>
 		<div class="col-lg-4">
