--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -131,13 +131,16 @@
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
 		<div class="col-lg-8">
                     <h2 class="section-heading">{% trans "About ScriptNet" %}</h2>
+<br>
+<br>
+<br>
                     <h4 class="section-heading"></h4>
                                         <p class="text-faded">
 {% trans "ScriptNet is a platform that hosts competitions related to Handwritten Text Recognition (HTR) and other Document Image Analysis (DIA) areas of research. It aims to attract as many research groups as possible to contribute to the task of unconstrained historical handwriting recognition. The main idea is to host several competitions in a common and uniform environment." %} 
                                         </p>
 <br><br><br>
                     <p class="text-faded">
-{% trans "ScriptNet contains functionality which enables everyone to submit results anytime and get evaluation results, as well as ranking, automatically.  It is an initiative of the <b>READ EU funded project</b>, aiming to provide large datasets for stimulating research in HTR and related technologies." %} 
+{% trans "ScriptNet contains functionality which enables everyone to submit results at any time and get evaluation results, as well as ranking, automatically.  It is an initiative of the <b>READ EU funded project</b>, aiming to provide large datasets for stimulating research in HTR and related technologies." %} 
     		    	</p>
                 </div>
 		<div class="col-lg-4">
@@ -278,11 +281,10 @@
                         {% trans "© 2016 READ Project." %}                        
                         {% trans "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 674943." %}                                                
                     </small>
-                </div>                    
-				<div class="col-lg-1"></div>                    
-			</div>
-
-
+                    </div>                    
+		<div class="col-lg-1"></div>                    
+		</div>
+ 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </section>
 
