Changes according to Günter's mail 27/12/16 Links are now underlined 'Document Understanding' is changed to 'Document Analysis and Recognition'

--- a/scriptnet/competitions/static/css/creative.css
+++ b/scriptnet/competitions/static/css/creative.css
@@ -28,6 +28,7 @@ a {
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
+    text-decoration: underline;
 }
 
 a:hover,
