--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "ScriptNet Document Understanding Competitions" %}</title>
+    <title>{% trans "ScriptNet Document Analysis and Recognition Competitions" %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.transparence.css' %}" type="text/css">
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">{% trans "Active Document Understanding Competitions" %}</h2>
+                    <h2 class="section-heading">{% trans "Active Document Analysis and Recognition Competitions" %}</h2>
 					<br><br><br><br><br><br><br>
                     <!-- <hr class="primary"> -->
                 </div>
