--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -70,10 +70,10 @@
                     <li>
                         <a class="page-scroll dontunderline" href="#services">{% trans "Competitions" %}</a>
                     </li>
+                    {% if not user.is_authenticated %}
                     <li>
                         <a class="page-scroll dontunderline" href="#register">{% trans "Register" %}</a>
-                    </li>
-                    {% if not user.is_authenticated %}
+                    </li>                    
                     <li>
                         <a class="page-scroll dontunderline" href="#login">{% trans "Login" %}</a>
                     </li>
@@ -201,6 +201,7 @@
 
     </section>
 
+    {% if not user.is_authenticated %}
     <section class="bg-primary" id="register">
         <div class="container">
             <div class="row">
@@ -230,6 +231,7 @@
             </div>
         </div>
     </section>
+    {% endif %}
 
     {% if not user.is_authenticated %}
     <section id="login">
