--- a/scriptnet/competitions/templates/competitions/competition_navbar.html
+++ b/scriptnet/competitions/templates/competitions/competition_navbar.html
@@ -13,12 +13,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="{% url 'index' %}#services">ScriptNet</a>
                 {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'index' %}">ScriptNet</a>
                 <a class="navbar-brand" href="{% url 'methodlist' competition_id=competition.id %}"><small>{% trans "My submissions" %}&nbsp;<small><small>[{{ user.first_name }} {{ user.last_name }}]</small></small></small></a>
-                {% else %}
-                <a class="navbar-brand" href="{% url 'index' %}">ScriptNet</a>
-                {% endif %}            
+                {% endif %}
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
