--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -274,6 +274,7 @@
 			</div>
             
             <br><br><br>
+            <br><br><br><br><br><br><br><br>
 			<div class="row text-center">
 				<div class="col-lg-2"></div>
 				<div class="col-lg-9">                                
@@ -281,12 +282,20 @@
                         {% trans "© 2016 READ Project." %}                        
                         {% trans "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 674943." %}                                                
                     </small>
-                    </div>                    
-		<div class="col-lg-1"></div>                    
-		</div>
+                </div>                    
+		        <div class="col-lg-1"></div>
+		    </div>
+            <br><br>
+            <div class="row text-center">
+                    <img src="{% static 'img/logos/logo_ec.png' %}" width="20%" class="img-responsive center-block" alt="">
+            </div>
  		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </section>
+				<div class="col-lg-8"></div>                
+                <div class="col-lg-3">                                
+                </div>
+                <div class="col-lg-1"></div>                
 
     <!-- jQuery -->
     <script src="{% static 'js/jquery.js' %}"></script>
