Towards watchlist -- Slightly better, not there yet

--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -50,22 +50,30 @@
         <div class="row">
             <div class="col-lg-10 col-md-10">
                 <div class="row">                
-                    <div class="col-lg-8 col-md-8">
+                    <div class="col-lg-7 col-md-7">
                     <h1>{{ competition.name }}</h1>
                     </div><!--
-                    --><div class="col-lg-4 col-md-4 vcenter">
+                    --><div class="col-lg-2 col-md-2"></div>
+                    <div class="col-lg-2 col-md-2 vcenter">
                         <br>
                     {% if user.is_authenticated %}
                     <form enctype="multipart/form-data" action="" method="post" role="form">
                         {% csrf_token %}
                         {% bootstrap_form watch_form %}
+                        {% if user.individual in competition.watchers.all %}
                         You are currently *following* this competition
                         {% buttons %}
-                            <button class="btn btn-default" type="submit" name="submit">{% trans "Unfollow this competition" %}</button>
-                        {% endbuttons %}
+                            <button class="btn btn-default" type="submit" name="submit">{% trans "Unfollow" %}</button>
+                        {% endbuttons %}                        
+                        {% else %}
+                        {% buttons %}
+                            <button class="btn btn-default" type="submit" name="submit">{% trans "Follow" %}</button>
+                        {% endbuttons %}                        
+                        {% endif %}
                     </form>					
                     {% endif %}                        
                     </div>
+                    <div class="col-lg-1 col-md-1"></div>
                 </div>
                 <p class="lead">
             {% block content %}                                        
